Fixed low contrast errors on Total cases tab. Stripped out redundant code to create alt text for plots - the outputs are SVG instead of PNG so this feature is not required.

--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,8 @@ img
 
 .value-highlight {
   font-weight: bold;
-  color: #39809E;
+  color: #fff;
+  background-color: #5d77a3;
 }
 
 /* Error message*/
